override default icon color

--- a/packages/components/src/Chip/Chip.mdx
+++ b/packages/components/src/Chip/Chip.mdx
@@ -28,7 +28,7 @@ import { Chip } from "@jobber/components/Chip";
         onClick={e => alert("🍪")}
       />{" "}
       <Chip
-        prefix={<ChipIcon name="quote" />}
+        prefix={<ChipIcon name="calendar" />}
         label="Icon"
         onClick={e => alert("🍪")}
       />
