--- a/packages/components/src/Chips/Chips.mdx
+++ b/packages/components/src/Chips/Chips.mdx
@@ -1,7 +1,7 @@
 ---
-name: Chip
+name: Chips
 menu: Components
-route: /components/chip
+route: /components/chips
 showDirectoryLink: true
 ---
 
@@ -11,13 +11,13 @@ import { Chip, ChipAvatar, ChipIcon, Chips } from ".";
 import { Content } from "@jobber/components/Content";
 import { Text } from "@jobber/components/Text";
 
-# Chip
+# Chips
 
 Chips are a flexible component that can be used for selection of items from a
 group while preserving vertical space in the interface.
 
 ```ts
-import { Chip, ChipAvatar, ChipIcon, Chips } from "../Chip";
+import { Chip, ChipAvatar, ChipIcon, Chips } from "../Chips";
 ```
 
 ## Single
