tweak dismiss docs

--- a/packages/components/src/Chips/Chips.mdx
+++ b/packages/components/src/Chips/Chips.mdx
@@ -122,16 +122,19 @@ user, leaving all selections blank.
 
 <!-- ### Add/dismiss selection
 
-If the user needs to add or remove multiple items to or from a group to indicate
-their selections, the dismissible Chip allows them to remove previous
-selections. Use this option when the full list of possible selections is too
-great to reasonably display in one ChipGroup. For example, "all of my phone
-contacts" is likely to be signficantly greater than would comfortably fit in one
+When the user will be selecting one or more items by inputting their own Chip
+options with, use the dismissible Chip.
+
+The dismissible Chip allows them to remove previous
+selections from the ChipGroup. Use this option when the full list of possible
+selections is too great to reasonably display in one ChipGroup. For example,
+"all of my phone contacts" would be far too many Chip options to present in one
 group, and would be overwhelming for the user to interpret.
 
-The mechanism to present the user with their options should be handled by the
-implementation of the feature, but could use autocomplete functionality to help
-the user narrow down their selections. -->
+This format also allows the user to create their own "freeform" Chip options,
+which they can also remove once added.
+
+ -->
 
 ## Props
 
