--- a/packages/components/src/Chips/Chips.mdx
+++ b/packages/components/src/Chips/Chips.mdx
@@ -8,6 +8,7 @@ showDirectoryLink: true
 import { Playground, Props } from "docz";
 import { useState } from "react";
 import { Chip, ChipAvatar, ChipIcon, Chips } from ".";
+import { Chip, ChipAvatar, ChipIcon, Chips, ChipDismissible } from ".";
 import { Content } from "@jobber/components/Content";
 import { Text } from "@jobber/components/Text";
 import { Disclosure } from "@jobber/components/Disclosure";
@@ -199,3 +200,27 @@ colors for parity with Jobber's mobile platform, but we will not be implementing
 this for the web components as of this first iteration of our web Chip. The
 mobile use-case is very specific to a filtering use case that we as of now do
 not anticipate will be required for web.
+
+### Dismissible Chip
+
+A standalone chip that gives you an action to remove it from a list.
+
+```ts
+import { ChipDismissible, ChipAvatar, ChipIcon } from "../Chips";
+```
+
+<Playground>
+  <ChipDismissible
+    prefix={<ChipAvatar initials="MB" />}
+    label="Mercedes-Benz"
+  />{" "}
+  <ChipDismissible
+    prefix={<ChipIcon name="engine" color="yellow" />}
+    label="Check engine light"
+  />{" "}
+  <ChipDismissible label="Black" />
+</Playground>
+
+#### Props
+
+<Props of={ChipDismissible} />
