feat(Components): export banner type

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -33,7 +33,7 @@ import { Banner } from "@jobber/components/Banner";
 
 ## Types of Banner
 
-BannerType could be any of the followings
+BannerType could be any of the following
 
 - `notice` [<Icon name="link" />](#notice-message)
 - `success` [<Icon name="link" />](#success-message)
