feat(Components): export banner type

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -9,6 +9,7 @@ import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { Banner } from ".";
 import { Content } from "@jobber/components/Content";
+import { Icon } from "@jobber/components/Icon";
 
 # Banner
 
@@ -30,7 +31,14 @@ import { Banner } from "@jobber/components/Banner";
 
 <Props of={Banner} />
 
----
+## Types of Banner
+
+BannerType could be any of the following
+
+- `notice` [<Icon name="link" />](#notice-message)
+- `success` [<Icon name="link" />](#success-message)
+- `warning`[<Icon name="link" />](#warning-message)
+- `error` [<Icon name="link" />](#error-message)
 
 ## Notice message
 
