use inverse examples for remove and delete

--- a/docs/content/product-vocabulary.mdx
+++ b/docs/content/product-vocabulary.mdx
@@ -172,7 +172,8 @@ Use an X icon with "**close**" as the accessible label for modals. Use
 ### delete / destroy / remove
 
 Use **delete** when permanently erasing information available in Jobber. Always
-follow up with a confirmation dialog.
+follow up with a confirmation dialog. Think of **delete** as the inverse of 
+[**create**](#add--create--new).
 
 | **✅ Do **    | **❌ Don't**  |
 | ------------- | ------------- |
@@ -180,7 +181,7 @@ follow up with a confirmation dialog.
 | Delete Client | Remove Client |
 
 Use **remove** when hiding information from the current view but not permanently
-erasing it.
+erasing it. Think of **remove** as the inverse of [**add**](#add--create--new).
 
 | **✅ Do **                        | **❌ Don't**                      |
 | --------------------------------- | --------------------------------- |
