--- a/packages/components/src/Chips/Chips.mdx
+++ b/packages/components/src/Chips/Chips.mdx
@@ -38,6 +38,9 @@ ChipGroup will allow the user to choose one of those items.
 This preserves vertical space while allowing the user to clearly identify which
 item they have selected.
 
+Unlike [Radio](/components/radio-group), the selected single-select Chip can be
+de-selected by the user, leaving all selections blank.
+
 <Playground>
   {() => {
     const [selected, setSelected] = useState();
@@ -53,7 +56,7 @@ item they have selected.
             value="Amazing"
           />
           <Chip
-            prefix={<ChipIcon name="quote" />}
+            prefix={<ChipIcon name="video" />}
             label="Wonderful"
             value="Wonderful"
           />
@@ -68,9 +71,6 @@ item they have selected.
     );
   }}
 </Playground>
-
-Unlike [Radio](/components/radio-group), the selected single-select Chip can be
-de-selected by the user, leaving all selections blank.
 
 ### Multi-select
 
@@ -102,7 +102,7 @@ user, leaving all selections blank.
             value="Amazing"
           />
           <Chip
-            prefix={<ChipIcon name="quote" />}
+            prefix={<ChipIcon name="video" />}
             label="Wonderful"
             value="Wonderful"
           />
@@ -169,14 +169,12 @@ import { ChipDismissible, ChipAvatar, ChipIcon } from "../Chips";
 
 <Props of={Chip} />
 
-### `<ChipDismissible>`
-
-<Props of={ChipDismissible} />
-
 <Card>
   <Content>
-    <Disclosure title="ChipAvatar and ChipIcon props">
+    <Disclosure title="ChipDismissible, ChipAvatar, and ChipIcon props">
       <Content>
+        <Heading level={5}>ChipDismissible</Heading>
+        <Props of={ChipDismissible} />
         <Heading level={5}>ChipAvatar</Heading>
         <Props of={ChipAvatar} />
         <Heading level={5}>ChipIcon</Heading>
