updated divider props and removed usage of hr

--- a/packages/components/src/Divider/Divider.mdx
+++ b/packages/components/src/Divider/Divider.mdx
@@ -67,7 +67,7 @@ should be used within a [`Content`](/components/content) component.
           </Text>
         </Content>
       </Card>
-      <Divider vertical size="large" />
+      <Divider direction="vertical" size="large" />
       <Card title="Cavendish">
         <Content>
           <Text>
