--- a/packages/components/src/Divider/Divider.mdx
+++ b/packages/components/src/Divider/Divider.mdx
@@ -55,28 +55,27 @@ should be used within a [`Content`](/components/content) component.
 ### Vertical
 
 <Playground>
-  <Content>
-    <Heading level={4}>Types of Bananas</Heading>
-    <div style={{ display: "flex", gap: "var(--space-base)" }}>
-      <Card title="Burro">
-        <Content>
-          <Text>
-            Squatty and slightly square at the edges, these bananas are slightly
-            tangy and lemony. When ripe, the fruit is soft and the skin is
-            yellow with black spots. Also called Horse, Hog, or Orinoco bananas.
-          </Text>
-        </Content>
-      </Card>
-      <Divider direction="vertical" size="large" />
-      <Card title="Cavendish">
-        <Content>
-          <Text>
-            This is the familiar yellow banana sold in United States’
-            supermarkets. There are also other sizes of Cavendish, including
-            Dwarf and Giant, though they are difficult to find.
-          </Text>
-        </Content>
-      </Card>
-    </div>
-  </Content>
+  <div style={{ width: "fit-content" }}>
+    <Card>
+      <Content>
+        <Heading level={4}>Summary</Heading>
+        <div style={{ display: "flex", gap: "var(--space-base)" }}>
+          <Content spacing="small">
+            <Heading level={5}>Today</Heading>
+            <Text>$ 104.13</Text>
+          </Content>
+          <Divider direction="vertical" />
+          <Content spacing="small">
+            <Heading level={5}>Tomorrow</Heading>
+            <Text>$ 262.42</Text>
+          </Content>
+          <Divider direction="vertical" />
+          <Content spacing="small">
+            <Heading level={5}>Next Week</Heading>
+            <Text>$ 12403.23</Text>
+          </Content>
+        </div>
+      </Content>
+    </Card>
+  </div>
 </Playground>
