fix(components): add ability to specify external url on card

--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -72,6 +72,19 @@ removed, and it may be worth re-assessing the hierarchy of your interface.
   </Card>
 </Playground>
 
+### Clickable with External URL
+
+<Playground>
+  <Card url="https://atlantis.getjobber.com/" external={true}>
+    <Content>
+      <Heading level={4}>View All</Heading>
+      <Text>
+        See how our 20+ features can help you organize, impress, and grow.
+      </Text>
+    </Content>
+  </Card>
+</Playground>
+
 ### Clickable with onClick
 
 <Playground>
