Added content guidelines

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -170,6 +170,19 @@ within a `Banner`. If you require an action, use the `primaryActions` prop. The
   </Content>
 </Playground>
 
+## Content Guidelines
+
+Content in banner should:
+
+<ul>
+  <li>Be concise and kept to only 1 to 2 sentences where possible</li>
+  <li>Avoid exceeding 200 characters</li>
+  <li>Follow the product vocabulary guide where applicable</li>
+  <li>
+    In the case of warning or error banners, explain how to resolve the issue
+  </li>
+</ul>
+
 ## Related components
 
 - To provide low priority, temporary feedback on the outcome of a user action,
