add link and markdown bullet points

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -174,14 +174,10 @@ within a `Banner`. If you require an action, use the `primaryActions` prop. The
 
 Content in banner should:
 
-<ul>
-  <li>Be concise and kept to only 1 to 2 sentences where possible</li>
-  <li>Avoid exceeding 200 characters</li>
-  <li>Follow the product vocabulary guide where applicable</li>
-  <li>
-    In the case of warning or error banners, explain how to resolve the issue
-  </li>
-</ul>
+- Be concise and kept to only 1 to 2 sentences where possible
+- Avoid exceeding 200 characters
+- Follow the [product vocabulary](/content/product-vocabulary) where applicable
+- In the case of warning or error banners, explain how to resolve the issue
 
 ## Related components
 
