docs: Add content guidelines to Banner component  (#722)
* Added content guidelines

* add link and markdown bullet points

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -170,6 +170,15 @@ within a `Banner`. If you require an action, use the `primaryActions` prop. The
   </Content>
 </Playground>
 
+## Content Guidelines
+
+Content in banner should:
+
+- Be concise and kept to only 1 to 2 sentences where possible
+- Avoid exceeding 200 characters
+- Follow the [product vocabulary](/content/product-vocabulary) where applicable
+- In the case of warning or error banners, explain how to resolve the issue
+
 ## Related components
 
 - To provide low priority, temporary feedback on the outcome of a user action,
