feat(components): Add keyboard shortcut to close menu on Escape (#704)
* added keyboard shortcut to close menu with escape, and updated/refactored menu item tests, as well as updating mocks for page tests

* updated snaps

* made easier to scan condition

* removed ctrl key in test

--- a/docs/content/product-vocabulary.mdx
+++ b/docs/content/product-vocabulary.mdx
@@ -264,7 +264,9 @@ object. For file selection, use **select a file** for consistency.
 
 ### refresh / reload
 
-Use **refresh** in error messages or on error banner actions, for system or connectivity errors. Although 'Reload' and 'Refresh' have the same meaning, use 'Refresh' for consistency.
+Use **refresh** in error messages or on error banner actions, for system or
+connectivity errors. Although 'Reload' and 'Refresh' have the same meaning, use
+'Refresh' for consistency.
 
 | **✅ Do** | **❌ Don't** |
 | --------- | ------------ |
