update documentation to mention that this only works on dev
remove line

--- a/packages/components/src/Chips/Chips.mdx
+++ b/packages/components/src/Chips/Chips.mdx
@@ -141,7 +141,7 @@ which they can also remove once added.
 A standalone chip that gives you an action to remove it from a list.
 
 ```ts
-import { ChipDismissible } from "../Chips";
+import { ChipDismissible } from "@jobber/components/Chips";
 ```
 
 <Playground>
