--- a/packages/hooks/src/useAssert/useAssert.mdx
+++ b/packages/hooks/src/useAssert/useAssert.mdx
@@ -11,41 +11,28 @@ import { useAssert } from "@jobber/hooks";
 
 # useAssert
 
-Disrupt the render of a component when a conditional is not met. This is helpful
-when you want to limit something that typescript can't do.
+During development, disrupt the render of a component when a conditional is met.
+This is helpful when you want to limit something that typescript can't do.
 
 ```tsx
 import { useAssert } from "@jobber/hooks";
 ```
 
-<Playground>
-  {() => {
-    const [shouldAssert, setShouldAssert] = useState(false);
-    useAssert(shouldAssert, "This is an error message");
-    return (
-      <Button label="Trigger error" onClick={() => setShouldAssert(true)} />
-    );
-  }}
-</Playground>
+```tsx
+const child: ReactElement = <Avatar initials="JBR" />;
+// Make sure the child can only be an <Icon /> component
+useAssert(child.type !== Icon, "You can only pass in an <Icon /> child");
+```
 
 ### Return a warning
 
 If you still want to assert but doesn't want to disrupt the rendering, you can
 pass in a `warn: true` param. This will throw a warning on your browser console.
 
-<Playground>
-  {() => {
-    const [shouldAssert, setShouldAssert] = useState(false);
-    useAssert(shouldAssert, "This is an console warning message", {
-      warn: true,
-    });
-    return (
-      <Button
-        label="Trigger console warning"
-        onClick={() => setShouldAssert(true)}
-      />
-    );
-  }}
-</Playground>
-
----
+```tsx
+const url: string = "http://getjobber.com";
+// Make sure the url always starts with https://
+useAssert(url.startsWith("http://"), "Please pass in an `https://` url", {
+  warn: true,
+});
+```
