--- a/packages/hooks/src/useAssert/useAssert.mdx
+++ b/packages/hooks/src/useAssert/useAssert.mdx
@@ -18,21 +18,25 @@ During development, disrupt the render of a component when a conditional is met.
 This is helpful when you want to limit something that typescript can't do...
 yet.
 
-```tsx
+<!-- TODO: Test if this is the one that makes the deploy preview fail -->
+
+<!-- ```
 const child: ReactElement = <Avatar initials="JBR" />;
 // Make sure the child can only be an <Icon /> component
 useAssert(child.type !== Icon, "You can only pass in an <Icon /> child");
-```
+``` -->
 
 ## Warn
 
 If you still want to assert but doesn't want to disrupt the render, you can pass
 in a `warn: true` param. This will throw a warning on your browser console.
 
-```tsx
+<!-- ```
 const url: string = "http://getjobber.com";
 // Make sure the url always starts with https://
-useAssert(url.startsWith("http://"), "Please pass in an `https://` url", {
-  warn: true,
-});
-```
+useAssert(
+  !url.startsWith("https://"),
+  "Please pass in a URL that starts with `https://` url",
+  { warn: true },
+);
+``` -->
