Update import statement to include absolute path

--- a/packages/components/src/Chips/Chips.mdx
+++ b/packages/components/src/Chips/Chips.mdx
@@ -21,7 +21,7 @@ Chips are a flexible component that can be used for selection of items from a
 group while preserving vertical space in the interface.
 
 ```ts
-import { Chip, Chips } from "../Chips";
+import { Chip, Chips } from "@jobber/components/Chips";
 ```
 
 ## Usage Guidelines
