--- a/packages/components/src/Divider/Divider.mdx
+++ b/packages/components/src/Divider/Divider.mdx
@@ -9,6 +9,8 @@ import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { Content } from "@jobber/components/Content";
 import { Text } from "@jobber/components/Text";
+import { Heading } from "@jobber/components/Heading";
+import { Card } from "@jobber/components/Card";
 import { Divider } from ".";
 
 # Divider
@@ -37,3 +39,43 @@ should be used within a [`Content`](/components/content) component.
 ## Props
 
 <Props of={Divider} />
+
+## Usage
+
+### Size
+
+<Playground>
+  <Content>
+    <Content>Some amazing content</Content>
+    <Divider size="large" />
+    <Content>Even more amazing content</Content>
+  </Content>
+</Playground>
+
+### Vertical
+
+<Playground>
+  <div style={{ width: "fit-content" }}>
+    <Card>
+      <Content>
+        <Heading level={4}>Summary</Heading>
+        <div style={{ display: "flex", gap: "var(--space-base)" }}>
+          <Content spacing="small">
+            <Heading level={5}>Today</Heading>
+            <Text>$ 104.13</Text>
+          </Content>
+          <Divider direction="vertical" />
+          <Content spacing="small">
+            <Heading level={5}>Tomorrow</Heading>
+            <Text>$ 262.42</Text>
+          </Content>
+          <Divider direction="vertical" />
+          <Content spacing="small">
+            <Heading level={5}>Next Week</Heading>
+            <Text>$ 12403.23</Text>
+          </Content>
+        </div>
+      </Content>
+    </Card>
+  </div>
+</Playground>
